# MemoVault

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_code_setup.md  local_ollama.py  quickstart.py
scripts/: setup-ollama.bat  setup-ollama.sh
src/memovault/: __init__.py  cli.py
src/memovault/api/: __init__.py  mcp.py  models.py  rest.py
src/memovault/config/: __init__.py  base.py  embedder.py  llm.py  memory.py  settings.py  vecdb.py
src/memovault/core/: __init__.py  chat_history.py  consolidator.py  decay.py  mem_cube.py  memovault.py  profile.py  scorer.py  session.py  stm_scorer.py  stm_store.py
src/memovault/embedder/: __init__.py  base.py  factory.py  ollama.py  openai.py  sentence_transformer.py
src/memovault/llm/: __init__.py  base.py  factory.py  ollama.py  openai.py
src/memovault/memory/: __init__.py  base.py  factory.py  item.py  simple.py  vector.py
src/memovault/plugins/: __init__.py  installer.py
src/memovault/ui/: dashboard.html
src/memovault/utils/: __init__.py  defaults.py  log.py  prompts.py
src/memovault/vecdb/: __init__.py  base.py  item.py  qdrant.py
tests/: __init__.py  conftest.py  test_chat_history.py  test_consolidator.py  test_decay.py  test_memory_item.py  test_profile.py  test_scorer.py  test_session.py  test_simple_memory.py  test_stm_scorer.py  test_stm_store.py
